--- a/chatterbox.html
+++ b/chatterbox.html
@@ -30,6 +30,7 @@
         <select></select>
         <button>Add Room</button>
       </div>
+      <button id="refresh">Refresh Feed</button>
       <form action="#" id="send" method="post">
         <input type="text" name="message" id="message"/>
         <input type="submit" name="submit" class="submit"/>
